--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/mdx": "^1.0.16",
     "@mdx-js/react": "^1.0.16",
     "@weknow/gatsby-remark-twitter": "^0.2.1",
+    "axios": "^0.19.0",
     "gatsby": "^2.4.2",
     "gatsby-image": "^2.1.1",
     "gatsby-mdx": "^0.6.3",
@@ -21,6 +22,7 @@
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.36",
+    "gatsby-plugin-typography": "^2.2.13",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.12",
     "gatsby-remark-embed-video": "^1.7.1",
@@ -31,18 +33,21 @@
     "gatsby-remark-smartypants": "^2.0.9",
     "gatsby-source-filesystem": "^2.0.33",
     "gatsby-transformer-sharp": "^2.1.19",
+    "gatsby-transformer-yaml": "^2.1.12",
     "prismjs": "^1.16.0",
-    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-typography": "^0.16.19",
     "styled-components": "^4.2.1",
+    "typography": "^0.16.19",
     "wipe.css": "^1.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
     "babel-eslint": "9.x",
+    "bluebird": "^3.5.5",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
