--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.36",
-    "gatsby-plugin-typography": "^2.2.13",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.12",
     "gatsby-remark-embed-video": "^1.7.1",
@@ -38,6 +37,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-intersection-visible": "^2.1.0",
+    "react-snuggle": "^1.1.0",
     "react-typography": "^0.16.19",
     "styled-components": "^4.2.1",
     "typography": "^0.16.19",
@@ -63,6 +64,7 @@
     "husky": "^2.3.0",
     "lighthousebot": "git+https://github.com/GoogleChromeLabs/lighthousebot.git",
     "lint-staged": "^8.1.7",
+    "node-instagram": "^4.3.0",
     "pre-commit": "^1.2.2",
     "prettier": "^1.17.1",
     "wait-for-netlify-preview": "^1.2.1"
