feat(all): design

--- a/content/home-sections/projects.yml
+++ b/content/home-sections/projects.yml
@@ -1,6 +1,6 @@
 projectsAndShots:
   - title: 'Skapen: skateboard pencil'
-    description: Because loving a sport is as good as the nature.
+    description: Because loving a sport is as good as loving nature.
     image: ./images/skapen.jpg
     link: https://www.behance.net/gallery/27308949/Skapen-Skateboard-pencil-
 
