--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/react": "^1.0.16",
     "@weknow/gatsby-remark-twitter": "^0.2.1",
     "axios": "^0.19.0",
+    "emoji-regex": "^8.0.0",
     "gatsby": "^2.4.2",
     "gatsby-image": "^2.1.1",
     "gatsby-mdx": "^0.6.3",
