--- a/package.json
+++ b/package.json
@@ -9,65 +9,61 @@
     "url": "git+https://github.com/.git"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.0.16",
-    "@mdx-js/react": "^1.0.16",
-    "@weknow/gatsby-remark-twitter": "^0.2.1",
-    "axios": "^0.19.0",
-    "emoji-regex": "^8.0.0",
-    "gatsby": "^2.4.2",
-    "gatsby-image": "^2.1.1",
-    "gatsby-mdx": "^0.6.3",
-    "gatsby-plugin-feed": "^2.2.1",
-    "gatsby-plugin-google-analytics": "^2.0.20",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.0",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.0.36",
-    "gatsby-remark-autolink-headers": "^2.0.16",
-    "gatsby-remark-copy-linked-files": "^2.0.12",
-    "gatsby-remark-embed-video": "^1.7.1",
-    "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.0.11",
-    "gatsby-remark-prismjs": "^3.2.9",
-    "gatsby-remark-responsive-iframe": "^2.1.1",
-    "gatsby-remark-smartypants": "^2.0.9",
-    "gatsby-source-filesystem": "^2.0.33",
-    "gatsby-transformer-sharp": "^2.1.19",
-    "gatsby-transformer-yaml": "^2.1.12",
-    "prismjs": "^1.16.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-headroom": "^2.2.8",
-    "react-helmet": "^5.2.1",
-    "react-intersection-visible": "^2.1.0",
-    "react-snuggle": "^1.1.0",
-    "styled-components": "^4.2.1",
-    "wipe.css": "^1.1.1"
+    "@mdx-js/mdx": "1.0.21",
+    "@mdx-js/react": "1.0.21",
+    "axios": "0.19.0",
+    "emoji-regex": "8.0.0",
+    "gatsby": "2.13.6",
+    "gatsby-image": "2.2.4",
+    "gatsby-mdx": "0.6.3",
+    "gatsby-plugin-feed": "2.3.2",
+    "gatsby-plugin-google-analytics": "2.1.1",
+    "gatsby-plugin-manifest": "2.2.1",
+    "gatsby-plugin-offline": "2.2.1",
+    "gatsby-plugin-react-helmet": "3.1.0",
+    "gatsby-plugin-sharp": "2.2.3",
+    "gatsby-remark-autolink-headers": "2.1.0",
+    "gatsby-remark-copy-linked-files": "2.1.0",
+    "gatsby-remark-embed-video": "1.7.1",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-images": "3.1.3",
+    "gatsby-remark-prismjs": "3.3.1",
+    "gatsby-remark-responsive-iframe": "2.2.1",
+    "gatsby-remark-smartypants": "2.1.0",
+    "gatsby-source-filesystem": "2.1.2",
+    "gatsby-transformer-sharp": "2.2.1",
+    "gatsby-transformer-yaml": "2.2.0",
+    "prismjs": "1.16.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-headroom": "2.2.8",
+    "react-helmet": "5.2.1",
+    "react-intersection-visible": "2.1.0",
+    "react-snuggle": "1.1.0",
+    "styled-components": "4.3.2",
+    "wipe.css": "1.1.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-conventional": "^8.0.0",
-    "babel-eslint": "9.x",
-    "bluebird": "^3.5.5",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "2.x",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "1.5.0",
-    "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-plugin-styled-components": "^3.0.7",
-    "husky": "^2.3.0",
-    "lighthousebot": "git+https://github.com/GoogleChromeLabs/lighthousebot.git",
-    "lint-staged": "^8.1.7",
-    "node-instagram": "^4.3.0",
-    "pre-commit": "^1.2.2",
-    "prettier": "^1.17.1",
-    "wait-for-netlify-preview": "^1.2.1"
+    "@commitlint/cli": "8.0.0",
+    "@commitlint/config-conventional": "8.0.0",
+    "babel-eslint": "10.0.2",
+    "eslint": "6.0.1",
+    "eslint-config-airbnb": "17.1.1",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-config-react-app": "4.0.1",
+    "eslint-plugin-flowtype": "3.11.1",
+    "eslint-plugin-import": "2.18.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-react": "7.14.2",
+    "eslint-plugin-react-hooks": "1.6.1",
+    "gatsby-plugin-sitemap": "2.2.1",
+    "gatsby-plugin-styled-components": "3.1.0",
+    "husky": "3.0.0",
+    "lint-staged": "9.1.0",
+    "node-instagram": "4.3.0",
+    "pre-commit": "1.2.2",
+    "prettier": "1.18.2"
   },
   "keywords": [
     "gatsby",
