--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "type": "git",
     "url": "git+https://github.com/.git"
   },
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop -H 0.0.0.0",
+    "dev": "npm run develop",
+    "serve": "gatsby serve",
+    "start": "npm run develop",
+    "format": "prettier --write src/**/*.{js,jsx,md,json,yml,svg}",
+    "lint": "eslint src --ext .js,.jsx"
+  },
   "dependencies": {
     "@mdx-js/mdx": "1.0.21",
     "@mdx-js/react": "1.0.21",
+    "@weknow/gatsby-remark-twitter": "0.2.1",
     "axios": "0.19.0",
     "emoji-regex": "8.0.0",
     "gatsby": "2.13.6",
@@ -65,21 +75,7 @@
     "pre-commit": "1.2.2",
     "prettier": "1.18.2"
   },
-  "keywords": [
-    "gatsby",
-    "medium",
-    "blog"
-  ],
   "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop -H 0.0.0.0",
-    "dev": "npm run develop",
-    "serve": "gatsby serve",
-    "start": "npm run develop",
-    "format": "prettier --write src/**/*.{js,jsx,md,json,yml,svg}",
-    "lint": "eslint src --ext .js,.jsx"
-  },
   "prettier": {
     "proseWrap": "never",
     "singleQuote": true,
