--- a/package.json
+++ b/package.json
@@ -15,34 +15,15 @@
     "serve": "gatsby serve",
     "start": "npm run develop",
     "format": "prettier --write src/**/*.{js,jsx,md,json,yml,svg}",
-    "lint": "eslint src --ext .js,.jsx"
+    "lint": "eslint src --ext .js,.jsx --fix"
   },
   "dependencies": {
-    "@mdx-js/mdx": "1.0.21",
+    "@mdx-js/mdx": "1.0.23",
     "@mdx-js/react": "1.0.21",
     "@weknow/gatsby-remark-twitter": "0.2.1",
-    "axios": "0.19.0",
-    "emoji-regex": "8.0.0",
     "gatsby": "2.13.6",
     "gatsby-image": "2.2.4",
-    "gatsby-mdx": "0.6.3",
-    "gatsby-plugin-feed": "2.3.2",
-    "gatsby-plugin-google-analytics": "2.1.1",
-    "gatsby-plugin-manifest": "2.2.1",
-    "gatsby-plugin-offline": "2.2.1",
-    "gatsby-plugin-react-helmet": "3.1.0",
-    "gatsby-plugin-sharp": "2.2.3",
-    "gatsby-remark-autolink-headers": "2.1.0",
-    "gatsby-remark-copy-linked-files": "2.1.0",
-    "gatsby-remark-embed-video": "1.7.1",
-    "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "3.1.3",
-    "gatsby-remark-prismjs": "3.3.1",
-    "gatsby-remark-responsive-iframe": "2.2.1",
-    "gatsby-remark-smartypants": "2.1.0",
-    "gatsby-source-filesystem": "2.1.2",
-    "gatsby-transformer-sharp": "2.2.1",
-    "gatsby-transformer-yaml": "2.2.0",
+    "gatsby-plugin-netlify": "^2.1.0",
     "prismjs": "1.16.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -50,14 +31,16 @@
     "react-helmet": "5.2.1",
     "react-intersection-visible": "2.1.0",
     "react-snuggle": "1.1.0",
+    "react-spring": "^8.0.27",
     "styled-components": "4.3.2",
     "wipe.css": "1.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "8.0.0",
     "@commitlint/config-conventional": "8.0.0",
+    "axios": "0.19.0",
     "babel-eslint": "10.0.2",
-    "eslint": "6.0.1",
+    "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.1",
     "eslint-config-prettier": "6.0.0",
     "eslint-config-react-app": "4.0.1",
@@ -67,8 +50,21 @@
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.2",
     "eslint-plugin-react-hooks": "1.6.1",
+    "gatsby-mdx": "0.6.3",
+    "gatsby-plugin-google-analytics": "2.1.1",
+    "gatsby-plugin-manifest": "2.2.1",
+    "gatsby-plugin-react-helmet": "3.1.0",
+    "gatsby-plugin-sharp": "2.2.3",
     "gatsby-plugin-sitemap": "2.2.1",
     "gatsby-plugin-styled-components": "3.1.0",
+    "gatsby-remark-embed-video": "1.7.1",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-images": "3.1.3",
+    "gatsby-remark-prismjs": "3.3.1",
+    "gatsby-remark-responsive-iframe": "2.2.1",
+    "gatsby-source-filesystem": "2.1.2",
+    "gatsby-transformer-sharp": "2.2.1",
+    "gatsby-transformer-yaml": "2.2.0",
     "husky": "3.0.0",
     "lint-staged": "9.1.0",
     "node-instagram": "4.3.0",
