--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby": "2.13.6",
     "gatsby-image": "2.2.4",
     "gatsby-plugin-netlify": "^2.1.0",
+    "gatsby-remark-autolink-headers": "^2.1.0",
     "prismjs": "1.16.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
