feat(data): update

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "danilowoznica-blog",
+  "name": "danilowoznica",
   "private": true,
-  "description": "",
+  "description": "Brazilian frontend developer based in Porto, Portugal. Design-driven developer focused on crafting meaningful products",
   "version": "0.1.0",
   "author": "Danilo Woznica <danilowoz@gmail.com>",
   "repository": {
