--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "wipe.css": "1.1.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "8.0.0",
+    "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "8.0.0",
     "axios": "0.19.0",
     "babel-eslint": "10.0.2",
