chore(deploy): to master

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "develop": "gatsby develop -H 0.0.0.0",
     "dev": "npm run develop",
     "serve": "gatsby serve",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public --branch master",
     "start": "npm run develop",
     "format": "prettier --write src/**/*.{js,jsx,md,json,yml,svg}",
     "lint": "eslint src --ext .js,.jsx --fix"
