--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "lint": "eslint src --ext .js,.jsx --fix"
   },
   "dependencies": {
-    "@mdx-js/mdx": "1.0.23",
-    "@mdx-js/react": "1.0.21",
+    "@mdx-js/mdx": "1.1.0",
+    "@mdx-js/react": "1.0.27",
     "@weknow/gatsby-remark-twitter": "0.2.1",
-    "gatsby": "2.13.6",
-    "gatsby-image": "2.2.4",
-    "gatsby-plugin-netlify": "^2.1.0",
-    "gatsby-remark-autolink-headers": "^2.1.0",
+    "gatsby-image": "2.2.7",
+    "gatsby-plugin-netlify": "^2.1.3",
+    "gatsby-plugin-remote-images": "^1.0.3",
+    "gatsby-remark-autolink-headers": "^2.1.3",
     "prismjs": "1.16.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -39,9 +39,10 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "8.0.0",
+    "@commitlint/config-conventional": "8.1.0",
     "axios": "0.19.0",
     "babel-eslint": "10.0.2",
+    "change-case": "^3.1.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.1",
     "eslint-config-prettier": "6.0.0",
@@ -52,9 +53,11 @@
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.2",
     "eslint-plugin-react-hooks": "1.6.1",
+    "gatsby": "^2.13.41",
+    "gatsby-cli": "^2.7.20",
     "gatsby-mdx": "0.6.3",
     "gatsby-plugin-google-analytics": "2.1.1",
-    "gatsby-plugin-manifest": "2.2.1",
+    "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-react-helmet": "3.1.0",
     "gatsby-plugin-sharp": "2.2.3",
     "gatsby-plugin-sitemap": "2.2.1",
