--- a/package.json
+++ b/package.json
@@ -21,34 +21,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mdx-js/loader": "^1.6.4",
-    "@next/mdx": "^9.4.2",
-    "next": "^9.4.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "styled-components": "^5.1.0"
+    "@mdx-js/loader": "1.6.4",
+    "@next/mdx": "9.4.2",
+    "@zeit/next-css": "1.0.1",
+    "next": "9.4.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "wipe.css": "1.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@serverless/core": "^1.1.2",
-    "@serverless/template": "^1.1.3",
-    "@significa/eslint-config": "^0.0.17",
-    "@significa/prettier-config": "^0.0.17",
-    "@significa/tsconfig-config": "^0.0.17",
-    "@svgr/webpack": "^5.4.0",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.5",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "@types/styled-components": "^5.1.0",
-    "eslint": "^7.1.0",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.6",
-    "prettier": "^2.0.5",
-    "serverless": "^1.71.3",
-    "serverless-next.js": "^1.12.0-alpha.6",
-    "typescript": "^3.9.3"
+    "@commitlint/cli": "8.3.5",
+    "@commitlint/config-conventional": "8.3.4",
+    "@significa/eslint-config": "0.0.17",
+    "@significa/prettier-config": "0.0.17",
+    "@significa/tsconfig-config": "0.0.17",
+    "@types/react": "16.9.35",
+    "@types/react-dom": "16.9.8",
+    "eslint": "7.1.0",
+    "husky": "4.2.5",
+    "jest": "26.0.1",
+    "lint-staged": "10.2.6",
+    "prettier": "2.0.5",
+    "typescript": "3.9.3"
   }
 }
