--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "@significa/eslint-config",
   "settings": {
-    "import/internal-regex": "^common|^lib/|^modules/|^pages/"
+    "import/internal-regex": "^common|/|^pages/|^content/"
   }
 }
