--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -25,6 +24,7 @@
     "@next/mdx": "9.4.2",
     "@zeit/next-css": "1.0.1",
     "next": "9.4.2",
+    "next-images": "^1.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "wipe.css": "1.3.0"
@@ -39,8 +39,8 @@
     "@types/react-dom": "16.9.8",
     "eslint": "7.1.0",
     "husky": "4.2.5",
-    "jest": "26.0.1",
     "lint-staged": "10.2.6",
+    "next-compose-plugins": "^2.2.0",
     "prettier": "2.0.5",
     "typescript": "3.9.3"
   }
