--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@significa/eslint-config": "0.0.17",
     "@significa/prettier-config": "0.0.17",
     "@significa/tsconfig-config": "0.0.17",
+    "@types/node": "^14.0.6",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
     "eslint": "7.1.0",
