--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@zeit/next-css": "1.0.1",
     "next": "9.4.2",
     "next-images": "^1.4.0",
+    "next-seo": "^4.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "wipe.css": "1.3.0"
