--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^14.0.6",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
+    "@types/rimraf": "^3.0.0",
     "eslint": "7.1.0",
     "eslint-plugin-mdx": "^1.7.0",
     "husky": "4.2.5",
@@ -46,6 +47,7 @@
     "next-compose-plugins": "^2.2.0",
     "prettier": "2.0.5",
     "remark-frontmatter": "^2.0.0",
+    "rimraf": "^3.0.2",
     "typescript": "3.9.3"
   }
 }
