feat(blog): list and content

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["@significa/eslint-config", "plugin:mdx/recommended"],
   "settings": {
-    "import/internal-regex": "^components|/|^pages/|^content/|^utils/"
+    "import/internal-regex": "^components/|^pages/|^content/|^utils/"
   }
 }
