--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy:staging": "serverless --stage=staging",
-    "deploy:production": "serverless --stage=production",
+    "deploy": "npm run export && touch out/.nojekyll && gh-pages -t -d out",
     "lint": "eslint \"./src/**/*.{js,jsx,ts,tsx}\"",
     "format": "prettier \"./src/**/*.+(ts|tsx|js|jsx|json|yml|yaml)\"",
     "format:write": "npm run format -- --write",
@@ -42,6 +41,7 @@
     "@types/rimraf": "^3.0.0",
     "eslint": "7.1.0",
     "eslint-plugin-mdx": "^1.7.0",
+    "gh-pages": "3.0.0",
     "husky": "4.2.5",
     "lint-staged": "10.2.6",
     "next-compose-plugins": "^2.2.0",
