ci(deploy): config

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy": "npm run export && touch out/.nojekyll && gh-pages -t -d out",
+    "export": "next export",
+    "deploy": "npm run build && npm run export && touch out/.nojekyll && gh-pages -t -d out -b master",
     "lint": "eslint \"./src/**/*.{js,jsx,ts,tsx}\"",
     "format": "prettier \"./src/**/*.+(ts|tsx|js|jsx|json|yml|yaml)\"",
     "format:write": "npm run format -- --write",
