--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@next/mdx": "9.4.2",
     "@zeit/next-css": "1.0.1",
     "next": "9.4.2",
-    "next-images": "^1.4.0",
-    "next-seo": "^4.5.0",
+    "next-images": "1.4.0",
+    "next-seo": "4.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "wipe.css": "1.3.0"
@@ -36,19 +36,20 @@
     "@significa/eslint-config": "0.0.17",
     "@significa/prettier-config": "0.0.17",
     "@significa/tsconfig-config": "0.0.17",
-    "@types/node": "^14.0.6",
+    "@types/node": "14.0.6",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
-    "@types/rimraf": "^3.0.0",
+    "@types/rimraf": "3.0.0",
     "eslint": "7.1.0",
-    "eslint-plugin-mdx": "^1.7.0",
+    "eslint-plugin-mdx": "1.7.0",
     "gh-pages": "3.0.0",
     "husky": "4.2.5",
     "lint-staged": "10.2.6",
-    "next-compose-plugins": "^2.2.0",
+    "next-compose-plugins": "2.2.0",
     "prettier": "2.0.5",
-    "remark-frontmatter": "^2.0.0",
-    "rimraf": "^3.0.2",
+    "prism-react-renderer": "1.1.1",
+    "remark-frontmatter": "2.0.0",
+    "rimraf": "3.0.2",
     "typescript": "3.9.3"
   }
 }
