--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "dependencies": {
     "@mdx-js/loader": "1.6.4",
     "@next/mdx": "9.4.2",
+    "@types/styled-components": "^5.1.0",
     "@zeit/next-css": "1.0.1",
     "next": "9.4.2",
     "next-images": "1.4.0",
     "next-seo": "4.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "styled-components": "^5.1.1",
+    "styled-jsx": "^3.3.0",
     "wipe.css": "1.3.0"
   },
   "devDependencies": {
@@ -40,6 +43,7 @@
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
     "@types/rimraf": "3.0.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "eslint": "7.1.0",
     "eslint-plugin-mdx": "1.7.0",
     "gh-pages": "3.0.0",
