--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next-compose-plugins": "2.2.0",
     "prettier": "2.0.5",
     "prism-react-renderer": "1.1.1",
+    "react-ga": "^3.1.1",
     "remark-frontmatter": "2.0.0",
     "rimraf": "3.0.2",
     "typescript": "3.9.3"
