ci(deploy): public files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,8 @@ jobs:
       - name: Cloudfront invalidation
         if: success()
         uses: chetan/invalidate-cloudfront-action@master
+        with:
+          args: --acl public-read --follow-symlinks --delete
         env:
           DISTRIBUTION: ${{ secrets.PRODUCTION_CLOUDFRONT }}
           PATHS: '/*'
