fix(vercel): redirect

--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,10 @@
     {
       "source": "/create-content-loader",
       "destination": "https://create-content-loader.now.sh/"
+    },
+    {
+      "source": "/create-content-loader/",
+      "destination": "https://create-content-loader.now.sh/"
     }
   ]
 }
