fix(vercel): redirect

--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,14 @@
     {
       "source": "/create-content-loader/",
       "destination": "https://create-content-loader.now.sh/"
+    },
+    {
+      "source": "/react-content-loader/",
+      "destination": "https://create-content-loader.now.sh/"
+    },
+    {
+      "source": "/react-content-loader",
+      "destination": "https://create-content-loader.now.sh/"
     }
   ]
 }
