--- a/vercel.json
+++ b/vercel.json
@@ -30,6 +30,14 @@
     {
       "source": "/react-content-loader",
       "destination": "https://create-content-loader.now.sh/"
+    },
+    {
+      "source": "/create-vue-content-loader/",
+      "destination": "https://create-content-loader.now.sh/"
+    },
+    {
+      "source": "/create-vue-content-loader",
+      "destination": "https://create-content-loader.now.sh/"
     }
   ]
 }
