--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@next/mdx": "9.4.2",
     "@types/styled-components": "^5.1.0",
     "@zeit/next-css": "1.0.1",
-    "next": "9.4.2",
+    "feed": "^4.2.1",
+    "next": "9.5.3",
     "next-images": "1.4.0",
     "next-seo": "4.5.0",
     "react": "16.13.1",
