--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "next-seo": "4.15.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "sharp": "^0.27.2",
     "styled-components": "^5.2.1",
     "styled-jsx": "^3.3.1",
     "wipe.css": "1.3.0"
   },
   "devDependencies": {
-    "@types/styled-components": "5.1.4",
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
     "@significa/eslint-config": "1.0.0",
@@ -45,6 +45,7 @@
     "@types/react": "16.9.55",
     "@types/react-dom": "16.9.9",
     "@types/rimraf": "3.0.0",
+    "@types/styled-components": "5.1.4",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "7.12.1",
     "eslint-plugin-mdx": "1.8.2",
