--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/loader": "1.6.19",
     "@next/mdx": "10.0.0",
     "@zeit/next-css": "1.0.1",
+    "canvas-sketch-util": "^1.10.0",
     "dayjs": "^1.9.4",
     "disqus-react": "^1.0.10",
     "feed": "^4.2.1",
@@ -31,6 +32,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sharp": "^0.27.2",
+    "simplex-noise": "^2.4.0",
     "styled-components": "^5.2.1",
     "styled-jsx": "^3.3.1",
     "wipe.css": "1.3.0"
