--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-seo": "4.15.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-twitter-widgets": "^1.10.0",
     "sharp": "^0.27.2",
     "simplex-noise": "^2.4.0",
     "styled-components": "^5.2.1",
