--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,67 @@
 {
   "github": {
     "silent": true
-  }
+  },
+  "redirects": [
+    {
+      "source": "/beginner-guide-where-to-start-testing-in-javascript",
+      "destination": "/blog/beginner-guide-where-to-start-testing-in-javascript"
+    },
+    {
+      "source": "/Atomic-Design-with-React",
+      "destination": "/blog/atomic-design-with-react"
+    },
+    {
+      "source": "/atomic-design-with-react",
+      "destination": "/blog/atomic-design-with-react"
+    },
+    {
+      "source": "/Advanced-blog-system-in-Gatsby",
+      "destination": "/blog/advanced-blog-system-in-gatsby"
+    },
+    {
+      "source": "/css-display-grid-and-sketch-layout",
+      "destination": "/blog/css-display-grid-and-sketch-layout"
+    },
+    {
+      "source": "/CSS-Display-Grid-and-Sketch-Layout",
+      "destination": "/blog/css-display-grid-and-sketch-layout"
+    },
+    {
+      "source": "/generating-typescript-types-and-react-hooks-based-on-graphql-endpoint",
+      "destination": "/blog/generating-typescript-types-and-react-hooks-based-on-graphql-endpoint"
+    },
+    {
+      "source": "/bringing-your-blockchain-business-to-react-native",
+      "destination": "/blog/bringing-your-blockchain-business-to-react-native"
+    },
+    {
+      "source": "/advanced-blog-system-in-gatsby",
+      "destination": "/blog/advanced-blog-system-in-gatsby"
+    },
+    {
+      "source": "/create-content-loader",
+      "destination": "https://create-content-loader.now.sh/"
+    },
+    {
+      "source": "/create-content-loader/",
+      "destination": "https://create-content-loader.now.sh/"
+    },
+    {
+      "source": "/react-content-loader/",
+      "destination": "https://create-content-loader.now.sh/"
+    },
+    {
+      "source": "/react-content-loader",
+      "destination": "https://create-content-loader.now.sh/"
+    },
+    {
+      "source": "/create-vue-content-loader/",
+      "destination": "https://create-content-loader.now.sh/"
+    },
+    {
+      "source": "/create-vue-content-loader",
+      "destination": "https://create-content-loader.now.sh/"
+    }
+  ]
 }
