--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "sass": "^1.45.0"
   },
   "dependencies": {
-    "astro-robots-txt": "^0.3.8"
+    "astro-robots-txt": "^0.3.8",
+    "satori": "^0.10.1",
+    "sharp": "^0.32.1"
   }
 }
